--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  rxdart: ^0.27.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  salomon_bottom_bar: ^3.2.0
+  expansion_tile_card: ^2.0.0
+  custom_radio_grouped_button: ^2.1.1
+  auto_size_text: ^3.0.0
+  pluto_grid: ^2.9.2
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +63,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
